# Emu4VitaPlus

./: .gitmodules  CMakeLists.txt  GRAPHICS.md  README.en.md  README.md
apps/: CMakeLists.txt  arcade_manager.cpp  defines.cpp
apps/atari800/: CMakeLists.txt
apps/atari800/pkg/assets/overlays/: overlays.ini
apps/dosbox/: CMakeLists.txt
apps/dosbox_pure/: CMakeLists.txt  Makefile
apps/dosbox_svn/: CMakeLists.txt
apps/fba_lite/: CMakeLists.txt  makefile.libretro
apps/fba_lite/pkg/assets/overlays/: overlays.ini
apps/fbalpha2012/: CMakeLists.txt  makefile.libretro
apps/fbneo/: CMakeLists.txt  Makefile  Makefile.common
apps/fceumm/: CMakeLists.txt
apps/gambatte/: CMakeLists.txt
apps/gambatte/pkg/assets/overlays/: overlays.ini
apps/genesis_plus_gx/: CMakeLists.txt
apps/genesis_plus_gx/pkg/assets/overlays/: overlays.ini
apps/genesis_plus_gx_wide/: CMakeLists.txt
apps/gpsp/: CMakeLists.txt  Makefile
apps/gpsp/pkg/assets/overlays/: overlays.ini
apps/mame2000/: CMakeLists.txt
apps/mame2003/: CMakeLists.txt
apps/mame2003/pkg/assets/overlays/: overlays.ini
apps/mame2003_plus/: CMakeLists.txt  Makefile
apps/mednafen_ngp/: CMakeLists.txt
apps/mednafen_ngp/pkg/assets/overlays/: overlays.ini
apps/mednafen_pce_fast/: CMakeLists.txt  Makefile  Makefile.common
apps/mednafen_supergrafx/: CMakeLists.txt  Makefile  Makefile.common
apps/mednafen_wswan/: CMakeLists.txt
apps/mednafen_wswan/pkg/assets/overlays/: overlays.ini
apps/mgba/: CMakeLists.txt  Makefile.libretro
apps/mgba/pkg/assets/overlays/: overlays.ini
apps/nestopia/: CMakeLists.txt
apps/nestopia/pkg/assets/overlays/: overlays.ini
apps/nestopia/pkg/sce_sys/livearea/contents/: template.xml
apps/pcsx_rearmed/: CMakeLists.txt  Makefile.libretro
apps/picodrive/: CMakeLists.txt  Makefile  Makefile.libretro
apps/picodrive/pkg/assets/overlays/: overlays.ini
apps/prosystem/: CMakeLists.txt
apps/snes9x2002/: CMakeLists.txt
apps/snes9x2005/: CMakeLists.txt
apps/snes9x2010/: CMakeLists.txt
apps/snes9x2010/pkg/assets/overlays/: overlays.ini
apps/stella2014/: CMakeLists.txt
apps/vba_next/: CMakeLists.txt  Makefile.libretro
apps/vba_next/pkg/assets/overlays/: overlays.ini
arch/: CMakeLists.txt
arch/pkg/assets/overlays/: overlays.ini
arch/pkg/data/ARC/overlays/: overlays.ini
arch/pkg/data/GBA/overlays/: overlays.ini
arch/pkg/data/GBC/overlays/: overlays.ini
arch/pkg/data/MD/overlays/: overlays.ini
arch/pkg/data/NES/overlays/: overlays.ini
arch/pkg/data/NGP/overlays/: overlays.ini
arch/pkg/data/PCE/overlays/: overlays.ini
arch/pkg/data/PS1/overlays/: overlays.ini
arch/pkg/data/SNES/overlays/: overlays.ini
arch/pkg/data/WSC/overlays/: overlays.ini
arch/source/: app.cpp  app.h  config.cpp  config.h  core_button.cpp  core_button.h  defines.h  main.cpp
frontend/: CMakeLists.txt  Makefile.common
frontend/pkgs/vita/assets/: font.pgf
frontend/pkgs/vita/assets/overlays/: readme.txt
frontend/source/: app.cpp  app.h  arc_dat.h  archive_manager.cpp  archive_manager.h  audio.cpp  audio.h  audio_buf.h  audio_resampler.cpp  audio_resampler.h  browser.cpp  browser.h  buf_base.h  cheat.cpp  cheat.h  circle_buf.h  config.cpp  config.h  config_types.h  core_options.cpp  core_options.h  defines.h  delay.cpp  delay.h  device_options.cpp  device_options.h  directory.cpp  directory.h  drawer.cpp  drawer.h  emulator.cpp  emulator.h  favorite.cpp  favorite.h  favourite.cpp  favourite.h  file.cpp  file.h  global.cpp  global.h  (+39 more)
frontend/source/audio/: audio.cpp  audio.h  audio_buf.h  audio_define.h  audio_output.cpp  audio_output.h  audio_resampler.cpp  audio_resampler.h
frontend/source/core_spec/: arcade_manager.cpp  arcade_manager.h  core_spec.cpp  core_spec.h  defines.cpp  defines.h  input_descriptor.cpp  input_descriptor.h
frontend/source/emu/: arcade_manager.cpp  arcade_manager.h  archive_manager.cpp  archive_manager.h  cache_manager.h  callbacks.cpp  callbacks.h  emulator.cpp  emulator.h  input.cpp  performance.cpp  performance.h  rewind.cpp  rewind.h  texture_buf.h  video.cpp
frontend/source/ui/: config_item.cpp  config_item.h  dialog.cpp  dialog.h  gb2312.i  item_base.h  item_config.cpp  item_config.h  item_config.i  item_control.cpp  item_control.h  item_core.cpp  item_core.h  item_device.h  item_hotkey.cpp  item_hotkey.h  item_selectable.cpp  item_selectable.h  item_state.cpp  item_state.h  menu_item.cpp  menu_item.h  misc.cpp  misc.h  my_imgui.cpp  my_imgui.h  tab_about.cpp  tab_about.h  tab_base.cpp  tab_base.h  tab_browser.cpp  tab_browser.h  tab_config.h  tab_control.cpp  tab_control.h  tab_core.cpp  tab_core.h  tab_favorite.cpp  tab_favorite.h  tab_graphics.cpp  (+11 more)
script/: README.en.md  README.md  arcade_dat.cmake  bg.xcf  compile_shaders.py  cores.py  dump_string.py  export.py  gen_app_icon.py  gen_arch_icon.py  gen_livearea.py  gen_namedb.py  gen_romdb.py  gen_title.py  grab_arc_dat.py  language.json  reduce_ttf_size.py  startup.xcf  title_image.cmake  to_execl.py  to_json.py  to_toml.py  trans.py  translation.json  ttf_remap.py
script/rom_db/: gba.names.json  (+3 more)
share/: CMakeLists.txt
share/pkg/assets/overlays/: overlays.ini
share/pkg/assets/shaders/: advanced-aa_f.gxp  advanced-aa_v.gxp  crt-easymode_f.gxp  crt-easymode_v.gxp  crt-geom_f.gxp  crt-geom_v.gxp  crt-lottes-fast_f.gxp  crt-lottes-fast_v.gxp  crt-lottes_f.gxp  crt-lottes_v.gxp  gba-color+lcd3x_f.gxp  gba-color+lcd3x_v.gxp  gba-color_f.gxp  gba-color_v.gxp  gbc-color_f.gxp  gbc-color_v.gxp  lcd3x_f.gxp  lcd3x_v.gxp  scale2xplus_f.gxp  scale2xplus_v.gxp  shaders.ini  sharp-bilinear-simple_f.gxp  sharp-bilinear-simple_v.gxp  sharp-bilinear_f.gxp  sharp-bilinear_v.gxp  zfast_crt_f.gxp  zfast_crt_v.gxp  zfast_lcd_f.gxp  zfast_lcd_v.gxp
share/source/: archive_reader.h  archive_reader_7z.cpp  archive_reader_7z.h  archive_reader_factory.cpp  archive_reader_factory.h  archive_reader_zip.cpp  archive_reader_zip.h  delay.cpp  delay.h  file.cpp  file.h  icons.h  input.cpp  input.h  log.cpp  my_imgui.cpp  my_imgui.h  profiler.cpp  profiler.h  rect.h  touch.cpp  touch.h  utils.cpp  utils.h
(+14 files in other folders)
